WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
286689
[WebGPU] optional counter sample indices are not respected
https://bugs.webkit.org/show_bug.cgi?id=286689
Summary
[WebGPU] optional counter sample indices are not respected
Mike Wyrzykowski
Reported
2025-01-29 10:00:38 PST
[WebGPU] optional counter sample indices are not respected
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2025-01-29 10:01:50 PST
<
rdar://problem/143829041
>
Mike Wyrzykowski
Comment 2
2025-01-29 10:12:40 PST
<
rdar://problem/143805885
>
Mike Wyrzykowski
Comment 3
2025-01-29 10:12:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39697
EWS
Comment 4
2025-01-30 22:18:11 PST
Committed
289596@main
(f60fad2e7a6d): <
https://commits.webkit.org/289596@main
> Reviewed commits have been landed. Closing PR #39697 and removing active labels.
Mike Wyrzykowski
Comment 5
2025-01-31 13:16:55 PST
Reopened Bugzilla. This caused a regression in ASAN because CommandEncoder is not thread safe, tracking revert in
https://bugs.webkit.org/show_bug.cgi?id=286824
.
Mike Wyrzykowski
Comment 6
2025-01-31 14:02:23 PST
***
Bug 286827
has been marked as a duplicate of this bug. ***
Mike Wyrzykowski
Comment 7
2025-01-31 14:03:14 PST
***
Bug 286824
has been marked as a duplicate of this bug. ***
Mike Wyrzykowski
Comment 8
2025-01-31 14:09:36 PST
Pull request:
https://github.com/WebKit/WebKit/pull/39834
EWS
Comment 9
2025-01-31 16:46:48 PST
Committed
289644@main
(c28e06df6892): <
https://commits.webkit.org/289644@main
> Reviewed commits have been landed. Closing PR #39834 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug