[WebGPU] optional counter sample indices are not respected https://bugs.webkit.org/show_bug.cgi?id=286689 rdar://143805885

Reviewed by Dan Glastonbury.

The specification says a sample index which is not specified should
be treated as 'don't sample' instead of sampling the counter.

* LayoutTests/fast/webgpu/nocrash/fuzz-286689-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-286689.html: Added.
Add regression test.

* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::timestampWriteIndex):
(WebGPU::CommandEncoder::beginComputePass):
(WebGPU::CommandEncoder::beginRenderPass):
Don't sample non-specified counter values and ensure counter sample
buffers are retained for the lifetime of the command buffer.

Canonical link: https://commits.webkit.org/289596@main