Source/WebGPU/WebGPU/HardwareCapabilities.mm
@@ -140,7 +140,15 @@ static Vector<WGPUFeatureName> baseFeatures(id<MTLDevice> device, const Hardware
         features.append(WGPUFeatureName_Float32Filterable);
 #endif
 
-    if (baseCapabilities.timestampCounterSet)
+    static dispatch_once_t onceToken;
+    static bool isDebugDevice = false;
+    dispatch_once(&onceToken, ^{
+        // Workaround for rdar://143905417
+        if ((isDebugDevice = [NSStringFromClass([device class]) containsString:@"Debug"]))
+            WTFLogAlways("WebGPU: Using DEBUG Metal device"); // NOLINT
+    });
+
+    if (!isDebugDevice && baseCapabilities.timestampCounterSet)
         features.append(WGPUFeatureName_TimestampQuery);
 
     return features;
